--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.5",
     "nuxt": "^3.13.0",
     "sass": "^1.79.4",
     "typescript": "^5.6.3",
     "vue": "latest",
     "vue-router": "latest",
     "vuetify-nuxt-module": "^0.18.3"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
